11782 reboot -f ends up creating bad /boot/transient.conf 11783 Print a message when rebooting due to a stale boot archive Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Dominik Hassler <hadfl@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>